--- a/index.html
+++ b/index.html
@@ -147,8 +147,7 @@
 
     <!-- PRODUK 3 -->
     <div class="product">
-      <img src="images/hydropack.jpg"alt="MTRL Carrier 45L">
-/400x300" alt="MTRL Hydropack">
+      <img src="images/hydropack.jpeg"alt="MTRL Hydropack">
       <h3>MTRL Hydropack</h3>
       <p>Hydropack minimalis untuk trail run & aktivitas cepat.</p>
       <div class="price">Rp 125.000</div>
@@ -172,3 +171,4 @@
 
 </body>
 </html>
+
