--- a/index.html
+++ b/index.html
@@ -303,13 +303,12 @@ body::before {
     <!-- PRODUK 1 -->
     <div class="product fade">
       <div class="slider">
-  <img src="images/45L-1.jpg">
-  <img src="images/45L-2.jpg">
-  <img src="images/45L-3.jpg">
-  <img src="images/45L-4.jpg">
+  <img src="images/45L-1.JPG">
+  <img src="images/45L-2.JPG">
+  <img src="images/45L-3.JPG">
+  <img src="images/45L-4.JPG">
   <img src="images/45L-5.png">
 </div>
-
 <div class="badges">
   <span>600D</span>
   <span>WATER RESIST</span>
@@ -415,6 +414,7 @@ faders.forEach(f => obs.observe(f));
 
 </body>
 </html>
+
 
 
 
