--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@ body::before {
   <img src="images/45L-5.png">
 </div>
 <div class="badges">
-  <span>600D</span>
+  <span>CORDURA 600D</span>
   <span>WATER RESIST</span>
   <span>BAR-TACK</span>
   <span>AirFlow Backsystem</span>
@@ -331,6 +331,11 @@ body::before {
     <!-- PRODUK 2 -->
     <div class="product fade">
       <img src="images/sld.JPG" alt="MTRL Clutch Bag 5L">
+      <div class="badges">
+  <span>600D</span>
+  <span>WATER RESIST</span>
+  <span>BAR-TACK</span>
+</div>
       <h3>MTRL Clutch Bag 5L</h3>
       <p>Ringan, ergonomis, cocok untuk outdoor ringan & daily use.</p>
       <div class="price">Rp 99.000</div>
@@ -365,7 +370,7 @@ body::before {
 
       <h3>MTRL Hydropack</h3>
       <p>Hydropack minimalis untuk trail run & aktivitas cepat.</p>
-      <div class="price">Rp 125.000</div>
+      <div class="price">Rp 299.000</div>
       <div class="actions">
         <a class="wa" href="https://wa.me/6281220371086?text=Halo%20MTRL,%20saya%20ingin%20order%20Hydropack">
           Order via WhatsApp
@@ -414,6 +419,7 @@ faders.forEach(f => obs.observe(f));
 
 </body>
 </html>
+
 
 
 
